# crypto-analysis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CELERY_CLI.md  README.md  docker-compose.data.yml  docker-compose.redis.yml  docker-compose.worker.yml  docker-manage.sh  env-example  full_schema.json  pyproject.toml  requirements.txt  run_predict.sh  run_training.sh
.gemini/: settings.json
.gemini/skills/: crypto-trader.skill
.gemini/skills/crypto-trader/: SKILL.md
.gemini/skills/crypto-trader/references/: architecture.md
.gemini/skills/market-regime-expert/: SKILL.md
.gemini/skills/market-regime-expert/assets/: adaptive_strategy_template.py
.gemini/skills/market-regime-expert/references/: regime_mapping.md
.gemini/skills/market-regime-expert/scripts/: regime_backtest_analyzer.py
.opencode/skill/: crypto-trader  market-regime-trader
examples/: basic_usage.py  online_learning_demo.py
scripts/: predict.py  train_online.py
src/crypto_analysis/: __init__.py  settings.py
src/crypto_analysis/data/: __init__.py  binance.py
src/crypto_analysis/online/: __init__.py  base.py  generator.py  pipeline.py
src/crypto_analysis/online/detection/: __init__.py  adaptive_lr.py  regime.py
src/crypto_analysis/online/models/: __init__.py  online_lstm.py  online_nn.py  online_rf.py
src/crypto_analysis/signals/: __init__.py  aggregator.py  backtest.py  base.py  features.py  ml_generators.py  predict.py  statistical.py  strategy.py  technical.py
src/crypto_analysis/utils/: __init__.py  analytics.py  optimization.py
tasks/: lessons.md  refactor-centralize-settings.md
tests/: conftest.py  test_performance.py  test_settings.py
tests/data/: __init__.py  test_binance.py
tests/online/: __init__.py  test_adaptive_lr.py  test_base.py  test_generator.py  test_online_lstm.py  test_online_nn.py  test_online_rf.py  test_pipeline.py  test_regime.py
tests/signals/: test_aggregator.py  test_backtest.py  test_base.py  test_features.py  test_generators.py  test_ml_generators_extended.py  test_predict.py  test_strategy.py  test_technical.py
tests/utils/: test_analytics.py  test_optimization.py
worker/: .env.example  Dockerfile  __init__.py  celery_app.py  requirements.txt  tasks.py  webhook.py
