[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crypto-analysis"
version = "0.1.0"
description = "Signal generation system integrating ML, technical analysis, and statistical methods for cryptocurrency trading"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SH Moeladi", email = "stevan.moeladi@gmail.com" }]
keywords = [
    "crypto",
    "trading",
    "signals",
    "machine-learning",
    "technical-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "celery[redis]==5.6.2",
    "tqdm>=4.66.0",
    "torch>=2.10.0",
    "redis>=6.4.0",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.ruff]
exclude = [".gemini", ".opencode", "models", "signals"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ASYNC"]
ignore = [
    "E501",
    "N803",   # Argument name should be lowercase (X, y are standard ML naming)
    "N806",   # Variable in function should be lowercase
    "B905",   # zip() without strict= (standard ML pattern)
    "SIM105", # Use contextlib.suppress - prefer explicit try/except for clarity
    "E722",   # Bare except (used in some legacy parts of code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
exclude = ['\.gemini', '\.opencode', 'models', 'signals', 'worker']
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "examples.*", "worker.*"]
disallow_untyped_defs = false
check_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
pythonpath = "src/"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ["-v", "--tb=short", "--strict-markers"]

[tool.coverage.run]
source = ["src/crypto_analysis"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
